# SiMATH

./: COPYRIGHT  FAQ  INSTALLATION  Makefile  Makefile.flags  Makefile.flags.in  README  README.SIMATH.FTP  README.md  SM.c  SM.cmds.in  compile_readline  compile_readline.in  config.cache  config.status  configure  configure.in  errmsg  hosttype  hosttype.in  install-dir  smconfig.h.in
Source_Images/: index.html
Source_Images/VERSION-3.10.2/: INSTALLATION  README.SIMATH  README.SIMATH.FTP  SIMATH-3.10.2.01  SIMATH-3.10.2.02  SIMATH-3.10.2.03  SIMATH-3.10.2.04  SIMATH-3.10.2.05  SIMATH-3.10.2.06  SIMATH-3.10.2.07  SIMATH-3.10.2.08  SIMATH-3.10.2.09  SIMATH-3.10.2.10  index.html
Source_Images/VERSION-3.10.3/: INSTALLATION  INTRO_SIMATH.dvi  INTRO_SIMATH.tex  README  README.SIMATH.FTP  SIMATH-3.10.3.01  SIMATH-3.10.3.02  SIMATH-3.10.3.03  SIMATH-3.10.3.04  SIMATH-3.10.3.05  SIMATH-3.10.3.06  SIMATH-3.10.3.07  SIMATH-3.10.3.08  SIMATH-3.10.3.09  SIMATH-3.10.3.10  index.html
Source_Images/VERSION-3.6.1/: INSTALLATION.3.6.1  README.SIMATH.3.6.1  README.SIMATH.FTP.3.6.1  SIMATH-3.6.1.aa  SIMATH-3.6.1.ab  SIMATH-3.6.1.ac  SIMATH-3.6.1.ad  SIMATH-3.6.1.ae  SIMATH-3.6.1.af  SIMATH-3.6.1.ag  SIMATH-3.6.1.ah  SIMATH-3.6.1.ai  SIMATH-3.6.1.aj  SIMATH-3.6.1.ak  SIMATH-3.6.1.al  SIMATH-3.6.1.am  index.html
Source_Images/VERSION-3.7/: INSTALLATION  README.SIMATH  README.SIMATH.FTP  SIMATH-3.7.aa  SIMATH-3.7.ab  SIMATH-3.7.ac  SIMATH-3.7.ad  SIMATH-3.7.ae  SIMATH-3.7.af  SIMATH-3.7.ag  SIMATH-3.7.ah  SIMATH-3.7.ai  SIMATH-3.7.aj  SIMATH-3.7.ak  SIMATH-3.7.al  SIMATH-3.7.am  SIMATH-3.7.an  SIMATH-3.7.ao  index.html
Source_Images/VERSION-3.8.1/: INSTALLATION  README.SIMATH  README.SIMATH.FTP  SIMATH-3.8.1.01  SIMATH-3.8.1.02  SIMATH-3.8.1.03  SIMATH-3.8.1.04  SIMATH-3.8.1.05  SIMATH-3.8.1.06  SIMATH-3.8.1.07  SIMATH-3.8.1.08  SIMATH-3.8.1.09  SIMATH-3.8.1.10  SIMATH-3.8.1.11  SIMATH-3.8.1.12  SIMATH-3.8.1.13  SIMATH-3.8.1.14  SIMATH-3.8.1.15  index.html
Source_Images/VERSION-3.9/: INSTALLATION  README.SIMATH  README.SIMATH.FTP  SIMATH-3.9.01  SIMATH-3.9.02  SIMATH-3.9.03  SIMATH-3.9.04  SIMATH-3.9.05  SIMATH-3.9.06  SIMATH-3.9.07  index.html
Source_Images/VERSION-4.0/: INSTALLATION  README  README.SIMATH.FTP  SIMATH-4.0.01  SIMATH-4.0.02  SIMATH-4.0.03  SIMATH-4.0.04  SIMATH-4.0.05  SIMATH-4.0.06  SIMATH-4.0.07  SIMATH-4.0.08  SIMATH-4.0.09  SIMATH-4.0.10  SIMATH-4.0.11  index.html
Source_Images/VERSION-4.5/: CHANGES  INSTALLATION  README  index.html
Source_Images/VERSION-4.6/: CHANGES  INSTALLATION  README  index.html
Source_Images/VERSION-4.6.1/: index.html
Source_Images/documentation/: INTRO_SIMATH.tex  elliptic_curve_algorithms.ps  simath_computer_algebrasystem.dvi
Source_Images/examples/: index.html
Source_Images/pascale-serf/: index.html  overview.dvi.readme  thesis.tar.readme
data/isiprime/: D_1  D_2  D_3  D_4  D_5  D_6  D_7  D_8  D_9  D_INFO
data/modular-relations/: p101  p103  p107  p109  p11  p113  p127  p13  p131  p139  p149  p151  p167  p17  p173  p179  p19  p191  p2  p23  p239  p29  p3  p31  p37  p41  p43  p47  p5  p53  p59  p61  p67  p7  p71  p73  p79  p83  p89  p97
doc/: Makefile  book1.sty  chap1.aux  chap1.tex  chap2.aux  chap2.tex  chap3.aux  chap3.tex  chap4.aux  chap4.tex  chap5.aux  chap5.tex  index.tex  manual.aux  manual.dvi  manual.idx  manual.tex  manual.toc  pict1.tex  pict2a.tex  pict2b.tex  pict3.tex  pict4.tex  pict5.tex  pict6.tex  texdefs.tex  title.tex
doc-dev/: c-mode.en.txt  c-mode.ja.txt
documentation/: INTRO_SIMATH.dvi  index.html  manual.dvi  manual.ps  paper1.ps  paper2.dvi  thesis.dvi.tar.readme
documentation/pascale-serf/: overview.dvi  thesis.dvi  thesis.dvi.tar
etc/: KEYWORDS  SM.cmds  extract-C.el  extract-M.el  extract-keys  key.doc
examples/: README
examples/SMif/: scriptf  scriptf_simple  textf
examples/advanced/: README
examples/basics/: README  m_integer_io.S  m_kant_simath.S
include/: _Earith.h  _G2arith.h  _HDarith.h  _P2arith.h  _PAFarith.h  _arith1.h  _arith2.h  _arith3.h  _arith4.h  _debug.h  _ec1.h  _ec2.h  _ec3.h  _ec4.h  _essen.h  _essenA.h  _heidelberg.h  _list.h  _matr1.h  _matr2.h  _matr3.h  _pol1.h  _pol2.h  _pol3.h  _pol4.h  _qnf.h  _simath.h  smconfig.h
readline-2.0/: Makefile.in  rltty.c
simcalc/: Makefile  Makemakefile  _calc.h  simcalc.S
simcalc/calcul/: calc.errors  calc.intro
simcalc/simer/: Makefile  alfolc.S  brackex.S  decl_error.S  dfolc.S  errm.S  error.S  ferrm.S  invectloc.S  isbracor.S  ismatrvec.S  isop.S  ispolsubst.S  matrfolc.S  modfolc.S  ofolc.S  ofolc_ov.S  prechar.S  print_error.S  sofolc.S  syntax.S
simcalc/simmv/: Makefile  av_basad.S  av_loesche.S  eggtaus.S  expoverint.S  factmsg.S  flexpr.S  flreads.S  fputcomp.S  fputcompfx.S  fputflfx.S  fputgf2el.S  fputgfsel.S  fputnfel.S  fputpc.S  fputpfl.S  fputpgf2.S  fputpgfs.S  fputpi.S  fputpm.S  fputpnf.S  fputpr.S  fputqnfidsp.S  gf2elred.S  gf2etudpm2.S  gfselred.S  iexpr.S  ifak.S  instring.S  ireads.S  isass.S  isequintrat.S  isequpol.S  isminus.S  isvarinvl.S  listaus.S  lkill.S  magf2red.S  magf2rem.S  magfsred.S  (+30 more)
simcalc/simov/: Makefile  artovar.S  ausgabe.S  ausgfunc.S  basad.S  calc_ausw.S  calc_bprod.S  calc_bsum.S  calc_cgf2b.S  calc_curgf.S  calc_decl.S  calc_dowhile.S  calc_fclose.S  calc_fgets.S  calc_fgetsp.S  calc_fload.S  calc_fopen.S  calc_for.S  calc_forpr.S  calc_forstep.S  calc_fread.S  calc_if.S  calc_print.S  calc_while.S  ctest.S  einzinf.S  errstop.S  feval.S  fileaus.S  funccl1.S  funccl2.S  funccl_GF2b.S  funccl_btoi.S  funccl_cgf2b.S  funccl_curgf.S  funccl_curnf.S  funccl_htoi.S  funccl_otoi.S  getline.S  inform.S  (+32 more)
simcalc/simre/: Makefile  absvalex.S  caifact.S  calc_GF2bit.S  calc_actec.S  calc_actmod.S  calc_actnf.S  calc_aftopr.S  calc_and.S  calc_arepli.S  calc_aval.S  calc_basmwg.S  calc_binom.S  calc_bitrans.S  calc_ceil.S  calc_chcoef.S  calc_chinrem.S  calc_chpol.S  calc_clnum.S  calc_coef.S  calc_cond.S  calc_conjug.S  calc_cons.S  calc_cont.S  calc_cper.S  calc_declaw.S  calc_deg.S  calc_denom.S  calc_deriv.S  calc_derivL.S  (+132 more)
sources/: Makefile  Makemakefile.awk
(+3307 files in other folders)
